--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-asgiref==3.4.1
 backports.entry-points-selectable==1.1.0
 distlib==0.3.2
-Django==3.2.6
-django-heroku==0.3.1
 filelock==3.0.12
 platformdirs==2.2.0
 psycopg2==2.9.1
-python-decouple==3.4
+pycodestyle==2.7.0
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
+toml==0.10.2
 virtualenv==20.7.0
-whitenoise==5.3.0
